filtrar venda por pessoa e empresa
